# google_drive_organizer

./: .editorconfig  .gitignore  .nixpacks.toml  .railwayignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  LICENSE  Makefile  PROJECT_STATUS.md  Procfile  README.md  commitlint.config.js  env.example  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway_start.py
.husky/: pre-commit
.vercel/: project.json
apps/api/: ai_service.py  classification.py  main.py  railway_start.py  requirements.txt
apps/api/drive_client/: __init__.py
apps/api/tests/: test_classification.py  test_drive_client.py
apps/web/: .vercelignore  next.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/auth/callback/: page.tsx
apps/web/app/contexts/: auth-context.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/scan-results/: page.tsx
apps/web/app/scan-results/components/: AIProposalView.tsx  FileDetailsPanel.tsx  TreeDiagram.tsx  TreeList.tsx
apps/web/app/test-api/: page.tsx
infra/: railway.json  supabase.toml  vercel.json
scripts/: deploy-railway.sh  provision.sh
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 001_initial_schema.sql  002_clean_setup.sql  003_fix_type_conflict.sql  004_drive_scan_tables.sql  005_fix_rls_policies.sql  006_google_tokens_table.sql  007_fix_rls_policies.sql  008_disable_rls_temp.sql  009_ai_organization_tables.sql  010_temp_disable_ai_rls.sql
tests/e2e/: workflow.test.ts
(+10 files in other folders)
